Fix image respacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,6 +47,7 @@ body {
 .crop {
   object-fit: contain;
   border-radius: 0;
+  min-height: 275px;
 }
 
 .masthead {
